feat: Adicionar suporte para geração de iniciais e URLs dinâmicas nas notificações - Melhorias na lógica de envio de e-mails e tradução de mensagens

--- a/server/config/locales/en-US.json
+++ b/server/config/locales/en-US.json
@@ -12,5 +12,38 @@
 	"%s created %s in %s on %s": "%s created %s in %s on %s",
 	"%s left a new comment to %s on %s": "%s left a new comment to %s on %s",
 	"%s mentioned you in %s on %s": "%s mentioned you in %s on %s",
-	"%s moved %s from %s to %s on %s": "%s moved %s from %s to %s on %s"
+	"%s moved %s from %s to %s on %s": "%s moved %s from %s to %s on %s",
+	"email:viewCard": "GO TO CARD",
+	"email:dueDate": "Due Date",
+	"email:action:commented": "commented on",
+	"email:action:moved": "moved",
+	"email:action:addedMember": "added you as a member to",
+	"email:action:mentioned": "mentioned you in",
+	"email:action:setDueDate": "changed the due date of",
+	"email:action:createdTask": "created a task in",
+	"email:action:completedTask": "completed a task in",
+	"email:label:comment": "Comment:",
+	"email:label:moved": "Moved:",
+	"email:label:addedMember": "Added as member:",
+	"email:label:mentioned": "Mentioned by",
+	"email:label:dueDateChanged": "Due Date Changed:",
+	"email:label:newTask": "New Task Created:",
+	"email:label:taskCompleted": "Task Completed:",
+	"email:description:dueDateChanged": "The card's due date was changed to",
+	"email:description:newTask": "created a new task in the card.",
+	"email:description:taskCompleted": "completed a task in the card.",
+	"email:description:addedMember": "You were added as a member of the card by",
+	"email:label:cardTitle": "Card Title",
+	"email:viewComment": "VIEW COMMENT",
+	"email:viewTask": "VIEW TASK",
+	"email:action:moveCard": "moved the card",
+	"email:action:setDueDate": "set the due date",
+	"email:action:createTask": "created a new task",
+	"email:action:completeTask": "completed a task",
+	"email:label:cardMovement": "Card Movement",
+	"email:label:dueDateSet": "Due Date Set",
+	"email:label:newTaskCreated": "New Task Created",
+	"email:label:taskCompleted": "Task Completed",
+	"email:label:addedToCard": "Added to card",
+	"email:label:dueDateCard": "Card Due Date"
 }
