--- a/server/config/locales/pt-PT.json
+++ b/server/config/locales/pt-PT.json
@@ -29,5 +29,51 @@
   "notification:createTask.verb": "criou",
   "notification:createTask.object": "uma tarefa",
   "notification:completeTask.verb": "concluiu",
-  "notification:completeTask.object": "a tarefa"
+  "notification:completeTask.object": "a tarefa",
+  "email:cardAssignedToYou": "Cartão atribuído a si",
+  "email:assignedYouToBoard": "atribuiu-o ao board \"{{board_name}}\"",
+  "email:dueDate": "Prazo",
+  "email:members": "membros",
+  "email:toDo": "A Fazer",
+  "email:viewCard": "Ver Cartão",
+  "email:viewBoard": "Ver Board",
+  "email:copyright": "© {{current_year}} Blachere boards. Todos os direitos reservados.",
+  "email:activity:movedToDone": "moveu \"Design mockups\" para Concluído",
+  "email:activity:commentedOnCard": "comentou no cartão",
+  "email:activity:addedYouToCard": "adicionou-o ao cartão",
+  "email:activity:mentionedYouInComment": "mencionou-o num comentário",
+  "email:activity:setDueDate": "definiu uma data limite",
+  "email:activity:updatedCard": "atualizou o cartão",
+  "email:timeAgo": "há {{time}}",
+  "email:action:commented": "Comentou em",
+  "email:action:moved": "Moveu o cartão em",
+  "email:action:addedMember": "Adicionou-o como membro em",
+  "email:action:mentioned": "Mencionou-o em",
+  "email:action:setDueDate": "Alterou a data de entrega em",
+  "email:action:createdTask": "Criou uma tarefa em",
+  "email:action:completedTask": "Concluiu uma tarefa em",
+  "email:label:comment": "Comentário:",
+  "email:label:moved": "Movido:",
+  "email:label:addedMember": "Adicionado como membro:",
+  "email:label:mentioned": "Mencionado por",
+  "email:label:dueDateChanged": "Data de Entrega Alterada:",
+  "email:label:newTask": "Nova Tarefa Criada:",
+  "email:label:taskCompleted": "Tarefa Concluída:",
+  "email:description:dueDateChanged": "A data de entrega do cartão foi alterada para",
+  "email:description:newTask": "criou uma nova tarefa no cartão.",
+  "email:description:taskCompleted": "concluiu uma tarefa no cartão.",
+  "email:description:addedMember": "Foi adicionado como membro do cartão por",
+  "email:label:cardTitle": "Título do Cartão",
+  "email:viewComment": "VER COMENTÁRIO",
+  "email:viewTask": "VER TAREFA",
+  "email:action:moveCard": "moveu o cartão",
+  "email:action:setDueDate": "definiu a data de entrega",
+  "email:action:createTask": "criou uma nova tarefa",
+  "email:action:completeTask": "concluiu uma tarefa",
+  "email:label:cardMovement": "Movimento do Cartão",
+  "email:label:dueDateSet": "Data de Entrega Definida",
+  "email:label:newTaskCreated": "Nova Tarefa Criada",
+  "email:label:taskCompleted": "Tarefa Concluída",
+  "email:label:addedToCard": "Foi adicionado ao cartão",
+  "email:label:dueDateCard": "Data Limite do Cartão"
 }
